--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,10 @@
     <style name="RemoteButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:textColor">#555666</item>
-        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">@drawable/button_text_color</item>
+        <item name="android:textSize">20dp</item>
         <item name="android:layout_margin">10dp</item>
+        <item name="android:background">@drawable/button_shape_shadowed</item>
     </style>
 
 </resources>
